[package]
name = "Phantasma-Rust"
version = "0.1.0"
edition = "2021"
authors = [
    "João Novo <joao@phantasma.io>"
]
readme = "README.md"
license = "MIT"
repository = "https://github.com/phantasma-io/Phantasma-Rust"
homepage = "https://phantasma.io"
keywords = ["phantasma", "blockchain", "rust", "sdk"]
categories = ["blockchain", "sdk"]
description = "Phantasma SDK for Rust"
rust-version = "1.69.0"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.11.17"
tokio = { version = "1.28.1", features = ["full"] }
serde = { version = "1.0.163", features = ["derive"] }
serde_json = "1.0.96"
byteorder = "1.4.3"
num-bigint = "0.4.3"
base58 = "0.2.0"
secp256k1 = "0.27.0"
ed25519-dalek = "1.0.1"
rand = "0.8.3"